@@ -1,1 +1,2 @@
 # AkashaGames
+--module-path C:/dev/javaFX/lib --add-modules javafx.controls,javafx.fxml
